<resources>
    <string name="app_name">iBiker</string>

    <!--main activity-->
    <string name="record_route_card_title">Record route.</string>
    <string name="record_route_card_button">Lets go</string>
    <string name="list_routes_card_title">See available routes.</string>
    <string name="list_routes_card_button">Show me</string>
    <string name="publication_card_title">Manage publications.</string>
    <string name="publication_card_button">Manage</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_state">Register?</string>
    <string name="fields_unfilled">All fields have to be filled.</string>
    <string name="email_badly_formatted">Email is badly formatted.</string>
    <string name="login_successful">Login successful.</string>
    <string name="register_successful">Register successful.</string>

    <!--main menu-->
    <string name="sign_out">Sign Out</string>

    <string name="title_activity_route_tracker">Map</string>

    <!--location tracker service-->
    <string name="location_service_notification_title">Recording has started.</string>
    <string name="location_service_notification_message">Your trip is being recorded, keep going!</string>

    <!--route tracker activity-->
    <string name="pause_recording">Pause</string>
    <string name="resume_recording">Resume</string>
    <string name="calculating">Calculating…</string>
    <string name="is_user_sure">Are your sure?</string>
    <string name="stop_recording_dialog_message">Do you really want to cancel recording?</string>
    <string name="save_recording_dialog_message">Do you want to save recording?</string>
    <string name="start_pin_title">Start</string>
    <string name="capture_photo">Take a Photo</string>
    <string name="info_tab">Info</string>
    <string name="photos_tab">Photos</string>
    <string name="save_route">Save</string>

    <!--route tracker info fragment-->
    <string name="record_time">Time: %1$s:%2$s:%3$s</string>
    <string name="current_speed">Speed: %1$s km/h</string>
    <string name="total_distance">Distance: %1$s km</string>

    <!--publication center activity-->
    <string name="route_start_date">Date: %1$s</string>
    <string name="route_publish_status">Status: %1$s</string>
    <string name="route_deleted">Route deleted successfully.</string>
    <string name="delete_route_dialog_message">Do you want to delete this route?</string>

    <!--publication edit activity-->
    <string name="start_date">Start date: %1$s</string>
    <string name="end_date">End date: %1$s</string>
    <string name="delta_time">Delta: %1$s:%2$s:%3$s</string>
    <string name="stops_count">Stops: %1$s</string>
    <string name="route_description">Describe your route…</string>
    <string name="title_activity_publication_editor">Map</string>
    <string name="end_pin_title">End</string>
    <string name="set_rating">Set difficulty</string>
    <string name="publish">Publish</string>
    <string name="toggle_map">Toggle Map</string>
    <string name="route_updated">Route updated successfully.</string>
    <string name="details">Details</string>
    <string name="additional_info">Additional Info</string>
    <string name="pick_bike_type">Pick bike type</string>

    <string-array name="bike_types">
        <item>MTB</item>
        <item>CROSS</item>
        <item>GRAVEL</item>
        <item>ROAD</item>
    </string-array>

    <!--routes gallery activity-->
    <string name="route_user">User: %1$s</string>
    <string name="route_comments">Comments Total: %1$s</string>

    <!--route viewer activity-->
    <string name="comments_tab">Comments</string>
    <string name="start_route">Lets go!</string>
    <string name="route_description_none">No route description…</string>
    <string name="add_comment">Add comment</string>
    <string name="add_rating">Add rating</string>
    <string name="write_comment">Write your comment here…</string>
    <string name="post_comment">Post</string>
    <string name="comment_rating">Comment rating</string>
    <string name="comment_text">Comment</string>
    <string name="all_comments">All comments</string>
    <string name="bike_type">Bike type</string>
    <string name="difficulty">Difficulty</string>
    <string name="comment_updated">Comment updated.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_route_viewer">Map</string>
</resources>
