<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PublicationEditorActivity" android:layout_weight="100">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:weightSum="100" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2">
        <android.support.design.widget.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                android:id="@+id/tabLayout">

            <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_tab"/>

            <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photos_tab"/>

        </android.support.design.widget.TabLayout>
        <fragment
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/editorFragmentMap"
                tools:context=".PublicationEditorActivity"
                android:name="com.google.android.gms.maps.SupportMapFragment" android:layout_weight="50"
        />
        <android.support.v4.view.ViewPager
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/viewPager" android:layout_weight="50">
        </android.support.v4.view.ViewPager>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@android:color/background_light"
            android:id="@+id/linearLayout2">
        <Button
                android:text="@string/save_route"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button4" style="?attr/buttonBarStyle"
                android:onClick="onSaveClick"/>
        <Switch
                android:text="@string/publish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/publishSwitch" android:layout_weight="0"
                style="?attr/buttonBarStyle"/>
        <Switch
                android:text="@string/toggle_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/switch3" android:layout_weight="0"
                android:onClick="onToggleMapClick"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>