<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RouteTrackerActivity" android:layout_weight="100">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:weightSum="100" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2">
        <android.support.design.widget.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tabLayout" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
            <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tabItem" android:text="@string/info_tab"/>
            <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tabItem2" android:text="@string/photos_tab"/>
        </android.support.design.widget.TabLayout>
        <fragment
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:id="@+id/map"
                tools:context=".RouteTrackerActivity"
                android:name="com.google.android.gms.maps.SupportMapFragment"/>
        <android.support.v4.view.ViewPager
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="50" android:id="@+id/trackerViewPager"/>
    </LinearLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:color/background_light" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:id="@+id/constraintLayout2">

        <Button
                android:text="@string/pause_recording"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/flowButton"
                android:onClick="onFlowClick"
                style="?attr/buttonBarStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"/>
        <Button
                android:text="@string/capture_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/photoButton"
                android:onClick="onPhotoCaptureClick"
                style="?attr/buttonBarStyle"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/flowButton"
                app:layout_constraintTop_toTopOf="parent"/>
        <Button
                android:text="@string/save_route"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/saveButton"
                style="?attr/buttonBarStyle"
                android:visibility="invisible" android:onClick="onSaveRouteClick"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>