<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:context=".fragments.ViewerInfoFragment">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:weightSum="100"
                android:id="@+id/linearLayout" android:gravity="center_horizontal" android:focusableInTouchMode="true">
            <TextView
                    android:text="@string/details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView5"
                    android:textColor="@color/colorPrimary" android:layout_marginTop="5dp"/>
            <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
            />
            <TextView
                    android:text="@string/calculating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/startDateTextView"/>
            <TextView
                    android:text="@string/calculating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/endDateTextView"/>
            <TextView
                    android:text="@string/calculating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/deltaTextView"/>
            <TextView
                    android:text="@string/calculating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/stopsTextView"/>
            <TextView
                    android:text="@string/bike_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView7"
                    android:textColor="@color/colorPrimary" android:layout_marginTop="5dp"/>
            <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
            />
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/bikeTypeSpinner"/>
            <TextView
                    android:text="@string/difficulty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView4"
                    android:textColor="@color/colorPrimary" android:layout_marginTop="5dp"/>
            <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
            />
            <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/difficultyRatingBar"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp" android:isIndicator="true"/>
            <TextView
                    android:text="@string/additional_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView6"
                    android:textColor="@color/colorPrimary" android:layout_marginTop="5dp"/>
            <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
            />
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/descriptionEditText" android:hint="@string/route_description_none"
                    android:enabled="false"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>