<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:padding="20dp" android:layout_margin="25dp"
                android:layout_weight="0.3">
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:background="@color/softGray">

                <TextView
                        android:text="@string/record_route_card_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView2"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                        android:textSize="30sp"/>
                <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:background="@android:color/background_light">

                    <Button
                            android:text="@string/record_route_card_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/button2"
                            android:onClick="onRecordRouteClick"
                            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" android:layout_weight="0"
                            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
                </android.support.constraint.ConstraintLayout>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:padding="20dp" android:layout_margin="25dp"
                android:layout_weight="0.3">
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:background="@color/softGray">

                <TextView
                        android:text="@string/list_routes_card_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" android:textSize="30sp"/>
                <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:background="@android:color/background_light">

                    <Button
                            android:text="@string/list_routes_card_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/button3"
                            android:onClick="onRoutesClick"
                            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>
                </android.support.constraint.ConstraintLayout>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="0.3" android:layout_margin="25dp"
                android:padding="20dp">
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:background="@color/softGray">

                <TextView
                        android:text="@string/publication_card_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/textView"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:textSize="30sp"
                        android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"/>
                <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:background="@android:color/background_light">

                    <Button
                            android:text="@string/publication_card_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/button"
                            android:onClick="onPublicationsClick"
                            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" android:layout_weight="0"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>
                </android.support.constraint.ConstraintLayout>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>